# OsgObjects

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/frame-dataset/: scan000.3d  scan000.pose  scan001.3d  scan001.pose  scan002.3d  scan002.pose  scan003.3d  scan003.pose  scan004.3d  scan004.pose  scan005.3d  scan005.pose  scan006.3d  scan006.pose  scan007.3d  scan007.frames  scan007.pose  scan008.3d  scan008.frames  scan008.pose  scan009.3d  scan009.frames  scan009.pose
data/shaders/: skybox.frag  skybox.vert  surface.frag  surface.vert  terrain.frag  terrain.vert
data/tiles/: metadata.xml
data/tiles/Data/Tile_+000_+000/: Tile_+000_+000.osgb  Tile_+000_+000_L15_0.osgb  Tile_+000_+000_L16_00.osgb  Tile_+000_+000_L17_000.osgb  Tile_+000_+000_L18_0000t1.osgb  Tile_+000_+000_L19_00000t3.osgb  Tile_+000_+000_L19_00010t3.osgb  Tile_+000_+000_L20_000000.osgb  Tile_+000_+000_L20_000010.osgb  Tile_+000_+000_L20_000020.osgb  Tile_+000_+000_L20_000030t1.osgb  Tile_+000_+000_L20_000100t1.osgb  Tile_+000_+000_L20_000110t1.osgb  Tile_+000_+000_L20_000120t1.osgb  Tile_+000_+000_L20_000130t1.osgb  Tile_+000_+000_L21_0000000.osgb  Tile_+000_+000_L21_0000100.osgb  Tile_+000_+000_L21_0000200.osgb  Tile_+000_+000_L21_0000300.osgb  Tile_+000_+000_L21_0000310.osgb  Tile_+000_+000_L21_0001000.osgb  Tile_+000_+000_L21_0001010.osgb  Tile_+000_+000_L21_0001100.osgb  Tile_+000_+000_L21_0001110.osgb  Tile_+000_+000_L21_0001200.osgb  Tile_+000_+000_L21_0001210.osgb  Tile_+000_+000_L21_0001300.osgb  Tile_+000_+000_L21_0001310.osgb  Tile_+000_+000_L22_00001000.osgb  (+11 more)
ffmpeg-filter/: CMakeLists.txt  common.cpp  common.h  ffmpeg-filter.cpp
imguiOsg/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  main.cpp  osgManager.cpp  osgManager.h  osgPickHandler.h
imguiShader/: CMakeLists.txt  commonFunc.h  main.cpp  samplePoints.3d  shader.h
osgClassicalShow/: CMakeLists.txt  HGVertex.cpp  HGVertex.h  ImguiMainPage.cpp  ImguiMainPage.h  main.cpp  osgManager.cpp  osgManager.h
osgForTempTest/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  osgManager.cpp  osgManager.h
osgGDAL/: CMakeLists.txt  HG_GDAL.cpp  HG_GDAL.h  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  main.cpp  osgManager.cpp  osgManager.h  osgPickHandler.h  shaderParams.cpp  shaderParams.h
osgImguiOpengl/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  GLAxis.cpp  GLAxis.h  GLManager.cpp  GLManager.h  GLMesh.cpp  GLMesh.h  ImguiPage.cpp  ImguiPage.h  main.cpp  osgManager.cpp  osgManager.h  osgPickHandler.h  shader.h  shader_m.h
osgImguiOpengl/glsl/: points_shader_rgb.fs  points_shader_rgb.vs
osgOperateObj/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  commonCGAL.h  main.cpp  modelFormat.h  osgManager.cpp  osgManager.h  osgPickHandler.h  reconFrame.cpp  reconFrame.h
osgOperateObj/filesystem/: LICENSE
osgOperateObj/filesystem/filesystem/: directory.h  path.h
osgOperateObj/poisson/: MyMiscellany.h  PlyFile.inl  PoissonRecon.cpp
osgOperateObj/solver/: box3.h  deprecated_point3.h  matrix33.h  matrix44.h  point4.h
osgParseBag/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  main.cpp  osgManager.cpp  osgManager.h  osgPickHandler.h  parseBag.cpp  parseBag.h
osgProcessModel/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  commonCGAL.cpp  main.cpp  osgManager.cpp  osgManager.h  reconFrame.cpp  reconFrame.h
osgProcessModel/poisson/: PoissonRecon.h
osgProcessModel/solver/: deprecated_point4.h  kdtree.h  line3.h  plane3.h  point3.h
osgReadSpecialFile/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  main.cpp  osgManager.cpp  osgManager.h
osgReadSpecialFile/plySpecial/: CMakeLists.txt  ReaderWriterPLY.hpp  ply.h  plyfile.cpp  vertexData.cpp  vertexData.h
osgReconFrame/: CMakeLists.txt  CameraHandlerFix.cpp  CameraHandlerFix.h  ImguiMainPage.cpp  ImguiMainPage.h  main.cpp  osgManager.cpp  osgManager.h
osgReconShowResult/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  main.cpp  osgManager.cpp  osgManager.h
osgShowFramePose/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  main.cpp  osgManager.cpp  osgManager.h
osgShowObjects/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  imgui.ini  main.cpp  osgManager.cpp  osgManager.h  readObjTinyobj.h  tiny_obj_loader.h
osgTerrain/: CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  ImguiMainPage.cpp  ImguiMainPage.h  MeshPostProcessing.cpp  MeshPostProcessing.h  commonDef.h  commonFunc.h  commonOsg.cpp  commonOsg.h  main.cpp  mappo.txt  osgManager.cpp  osgManager.h  osgPickHandler.h  osgTerrain.sln  osgTerrain.vcxproj  osgTerrain.vcxproj.filters  reconFrame.cpp  reconFrame.h  terrain.txt  voxels.h
osgTerrain/collaborative/: baseModel.h  common.h  dataStruct.cpp  dataStruct.h  ncnnNet.cpp  ncnnNet.h  policyNet.cpp  policyNet.h  trainTestCol.cpp  trainTestCol.h  trainer.cpp  trainer.h
osgTerrain/generator/: generator_recon.cpp  generator_recon.h  terrainModification.cpp  terrainModification.h  terraingenerator.cpp  terraingenerator.h  terraingenerator_roblox.cpp  terraingenerator_roblox.h  terraingraphgenerator.cpp  terraingraphgenerator.h  voxel_mesher.cpp  voxel_mesher.h
osgTerrain/generator/naiveSurfaceNets/: SurfaceNets.cpp  SurfaceNets.h  voxel_mesher_surfacenet.cpp  voxel_mesher_surfacenet.h
osgTerrain/physics/: physicsManager.cpp  physicsManager.h
osgTerrain/solver/: fitting3.h
osgTerrain/terrains/: VoxelDataLoader.h  commonStruct.h  meshgeneratormanager.cpp  meshgeneratormanager.h  terrainManager.cpp  terrainManager.h  voxelBrush.cpp  voxelBrush.h  voxelblock.h  voxelmap.cpp  voxelmap.h  voxelterrain.cpp  voxelterrain.h
osgTerrain/voxels/: common_enum.h  utility.h  voxelBuffer.cpp  voxelBuffer.h  voxel_buffer.cpp  voxel_buffer.h  voxel_constants.h
osgUnwrap/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  MeshPostProcessing.cpp  imgui.ini  main.cpp  osgManager.cpp  osgManager.h
postRawVolume/: CMakeLists.txt  ImguiMainPage.cpp  ImguiMainPage.h  OsgImguiHandler.cpp  OsgImguiHandler.h  imgui.ini  osgManager.cpp  osgManager.h
